<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="16dp"
    android:layout_marginTop="16dp"
    android:layout_marginRight="16dp"
    android:layout_marginBottom="16dp"
    android:orientation="vertical"
    tools:context=".AdoptForm.AdoptFormActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/adopt_baseInfo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="基本資料"
                    android:textSize="18sp" />

            </LinearLayout>

            <EditText
                android:id="@+id/etReal_Name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_Real_Name" />

            <EditText
                android:id="@+id/etPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_Phone" />

            <EditText
                android:id="@+id/etAge"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/col_Age"
                android:inputType="number" />

            <EditText
                android:id="@+id/etID_Card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_ID_Card" />

            <EditText
                android:id="@+id/etAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_Address" />

            <EditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_Email" />

            <RadioGroup
                android:id="@+id/radioGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity=""
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/rbMen"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="男" />

                <RadioButton
                    android:id="@+id/rbWoman"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="40dp"
                    android:text="女" />

            </RadioGroup>

            <TextView
                android:id="@+id/tvFormEmpty"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@android:color/holo_red_light" />

            <Button
                android:id="@+id/btnAdoptForm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:background="@color/colorAccent"
                android:onClick="onAdoptFormClick"
                android:text="送出"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <ImageView
                android:id="@+id/img_autoFillForm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="16dp"
                android:onClick="onAutoFillForm"
                android:src="@drawable/dchouse" />
        </LinearLayout>
    </ScrollView>
</RelativeLayout>